@@ -1,6 +1,6 @@
 ## Copyright (C) 1995-2007, Index Data
 ## All rights reserved.
-## $Id: Makefile.am,v 1.28 2007-01-03 08:42:13 adam Exp $
+## $Id: Makefile.am,v 1.29 2007-01-24 11:50:18 adam Exp $
 
 
 bin_PROGRAMS=yaz-client 
@@ -8,7 +8,7 @@ EXTRA_PROGRAMS=bertorture
 
 EXTRA_DIST = default.bib
 
-COMMON=admin.c admin.h tabcomplete.c tabcomplete.h
+COMMON=admin.c admin.h tabcomplete.c tabcomplete.h fhistory.c fhistory.h
 yaz_client_SOURCES=client.c $(COMMON)
 
 AM_CFLAGS=$(THREAD_CFLAGS)
